--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,9 @@
     "rules": {
         "vue/multi-word-component-names": 0,
         "vue/no-unused-components": 0,
+        "vue/html-indent": 0,
+        "vue/no-unused-vars": 0,
+        "vue/valid-v-for": 0,
         "@typescript-eslint/no-unused-vars": 0,
         "@typescript-eslint/no-empty-function": 0,
         "vue/valid-template-root": 0
