Update package.json, 修正软件名称

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gxu-jw-tool-beta",
+  "name": "gxu-jw-tool",
   "version": "0.2.1",
   "author": "HuanChen",
   "description": "广西大学教务系统工具",
