--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
         "vue/html-indent": 0,
         "vue/no-unused-vars": 0,
         "vue/valid-v-for": 0,
+        "vue/require-v-for-key": 1,
         "@typescript-eslint/no-unused-vars": 0,
         "@typescript-eslint/no-empty-function": 0,
         "vue/valid-template-root": 0
